# ORTOA

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  DATA.md  Dockerfile  KV_RPC.thrift  Makefile  Operation.thrift  README.md  YCSB.tar.gz.REMOVED.git-id  benchmark  benchmark.cpp  client.cpp  clientHelper.cpp  clientHelper.h  clients.cpp  concurrent_benchmark.cpp  constants.h  dependencies.txt  encryption_benchmark  estimate_encryption.cpp  ortoa-lib.sh  ortoa.edl  proxy.cpp  server.cpp  waffle.cpp  waffle.h
benchmark/: README.md  pyproject.toml
benchmark/experiments/: byte_size_experiment.yaml  sample.yaml
benchmark/infrastucture/: experiment_collection.py  jobs.py  main.py  runner.py
benchmark/interface/: data.py  experiment.py  flags.py  parameter.py
benchmark/test/infrastructure/: test_experiment_collection.py  test_experiment_datagen.py
benchmark/test/interface/: test_experiment_yaml.py
client/: .gitignore  CMakeLists.txt  Makefile  client.cpp  client_utils.cpp  client_utils.h
constants/: constants.h  network.h
data/: README.md
data/experiments/: client_thread_experiment.yaml  sample.yaml  test.yaml
data/experiments/byte_size/: 1000_bytes.yaml  1000_bytes_operations.csv  1000_bytes_seed.csv  100_bytes.yaml  100_bytes_operations.csv  100_bytes_seed.csv  10_bytes.yaml  10_bytes_operations.csv  10_bytes_seed.csv  200_bytes.yaml  200_bytes_operations.csv  200_bytes_seed.csv  300_bytes.yaml  300_bytes_operations.csv  300_bytes_seed.csv  400_bytes.yaml  400_bytes_operations.csv  400_bytes_seed.csv  500_bytes.yaml  500_bytes_operations.csv  500_bytes_seed.csv  750_bytes.yaml  750_bytes_operations.csv  750_bytes_seed.csv
data/experiments/byte_size_experiment/: 100_bytes.yaml  10_bytes.yaml  12_bytes.yaml  150_bytes.yaml  200_bytes.yaml  20_bytes.yaml  250_bytes.yaml  300_bytes.yaml  350_bytes.yaml  400_bytes.yaml  500_bytes.yaml  50_bytes.yaml
data/experiments/client_concurrency/: client_thread_experiment.yaml  client_thread_experiment_1.yaml  client_thread_experiment_48.yaml
data/experiments/client_concurrency_experiment/: client_thread_experiment.yaml  client_thread_experiment_1.yaml  client_thread_experiment_48.yaml
data/experiments/db_size/: 2e10_keys.yaml  2e12_keys.yaml  2e14_keys.yaml  2e16_keys.yaml  2e18_keys.yaml  2e20_keys.yaml  2e22_keys.yaml
data/experiments/percent_write/: 0_write.yaml  100_write.yaml  25_write.yaml  50_write.yaml  75_write.yaml
data/experiments/percent_write_experiment/: 0_write.yaml  25_write.yaml  50_write.yaml
data/experiments/wip/: 150_bytes.yaml  17_bytes.yaml  200_bytes.yaml  250_bytes.yaml  300_bytes.yaml  30_bytes.yaml  350_bytes.yaml  400_bytes.yaml  50_bytes.yaml  60_bytes.yaml  70_bytes.yaml  80_bytes.yaml  90_bytes.yaml
data/sample_generated_seed/: sample_operations.csv  seed_data.csv
data/seed/: sample_operations.csv  seed_data.csv
docs/: BENCHMARK.md  BUILD.md  DATA_GENERATION.md  INSTALL.md
enclave/: .gitignore  CMakeLists.txt  Makefile
enclave/common/: ecalls.cpp
errors/: OECreationFailed.h
extras/: README.md  pyproject.toml  setup.py
extras/benchmark/infrastucture/: experiment_collection.py  jobs.py  main.py  runner.py
extras/benchmark/interface/: data.py  experiment.py  flags.py  parameter.py
extras/benchmark/test/infrastructure/: test_create_jobs.py  test_experiment_collection.py  test_experiment_datagen.py
extras/benchmark/test/interface/: test_experiment_yaml.py  test_parameters.py
extras/benchmark/test/interface/test_files/: byte_size_datagen_int_multiple.yaml
extras/data_generation/: generate_sample_operations.py  generate_seed_data.py
extras/data_generation/generators/: value_generator.py
extras/ortoa/benchmark/: README.md  sample.yaml
extras/ortoa/benchmark/experiments/: byte_size_experiment.yaml
extras/ortoa/benchmark/infrastucture/: experiment_collection.py  jobs.py  main.py  runner.py  stats_collection.py
extras/ortoa/benchmark/interface/: data.py  experiment.py  flags.py  parameter.py
extras/ortoa/benchmark/test/interface/: test_experiment_yaml.py
extras/ortoa/data_generation/: README.md  generate_sample_operations.py  generate_seed_data.py
extras/ortoa/data_generation/generators/: key_generator.py  value_generator.py
extras/test/benchmark/infrastructure/: test_create_jobs.py  test_experiment_datagen.py  test_load_experiments.py
extras/test/benchmark/interface/: test_experiment_yaml.py
extras/test/benchmark/interface/test_files/: byte_size_datagen_int.yaml  byte_size_datagen_int_range.yaml  random_integer_datagen.yaml
host/: .gitignore  CMakeLists.txt  Makefile  host.cpp  redis.cpp  redis.h
ortoa-lbl/: .gitignore  Dockerfile  KV_RPC.thrift  Makefile  Operation.thrift  README.md  clientHelper.cpp  clientHelper.h  clients.cpp  proxy.cpp
ortoa-tee/: .clang-format  .gitignore  README.md
ortoa-tee/data/: README.md
ortoa-tee/data/sample/: README.md  sample_experiment.yaml
ortoa-tee/docs/: DATA_GENERATION.md  ERRORS.md
ortoa-tee/extras/: README.md  setup.py
ortoa-tee/scripts/: ortoa-lib.sh
ortoa-tee/src/: ortoa.edl
ortoa-tee/src/client/: SharedQueue.h  client.cpp  (+1 more)
scripts/: ortoa-lib.sh
scripts/benchmark/: run_tests.sh
scripts/data-generation/: README.md  generate-sample-operations.py  generate-seed-data.py
scripts/formatting-and-linting/: clang-format-all.sh
scripts/test/: run_benchmark_tests.sh
src/: CMakeLists.txt  ortoa.edl
src/client/: CMakeLists.txt  SharedQueue.h  client.cpp  clientUtils.cpp  client_utils.cpp  client_utils.h
src/constants/: constants.h
src/crypto/: encryption_engine.cpp  encryption_engine.h
src/enclave/: CMakeLists.txt  ecalls.cpp  ortoa.conf
src/host/: CMakeLists.txt  host.cpp  redis  redis.cpp
src/libcommon/: CMakeLists.txt
src/libcommon/include/: constants.h  encryption_engine.h  errors.h
src/libcommon/src/: encryption_engine.cpp
src/libdb/: CMakeLists.txt
src/libdb/include/: redis.h
src/libdb/src/: CMakeLists.txt
src/libstorage/include/: StorageInterface.h  redis.h
src/libstorage/src/: redis.cpp
src/thrift/: Operation.thrift
thrift/: Operation.thrift
(+157 files in other folders)
