[build-system]
requires = [
  "setuptools >= 40.9.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "ortoa-sdk"
version = "0.0.1"
readme = "README.md"

dependencies = [
  "pydantic>=2.4.2",
  "pyyaml>=6.0.1",
  "redis[hiredis]>=5.0.0",
]

[project.optional-dependencies]
dev = [
  "icecream==2.1.3",
  "pytest==7.4.3"
]
